# light-whisper

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  DESIGN.md  FEATURE_INVENTORY.md  LICENSE  NOTICE  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml  release.yml
.impeccable/: design.json
docs/: UI_CONTRACT.md  parity-checklist.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/wiki/: AI_Polish_Commands.md  AI_Polish_Service.md  Adaptive_Learning_Profile.md  Ai_Polish.md  Ai_Polish_Transport_Retry_Tests.md  Alibaba_ASR_Service.md  AppState.md  App_Bootstrap.md  App_Constants.md  App_Errors.md  App_State.md  App_Window.md  Assistant_Commands.md  Assistant_Search_Layer.md  Audio.md  Audio_Commands.md  Audio_Service.md  Audio_Service_Module.md  BaseASRServer.md  Capture.md  Chinese_I18n.md  Clipboard.md  Clipboard_Bridge.md  Codex_OAuth_Commands.md  Codex_OAuth_Flow.md  Codex_OAuth_Service.md  Commands_Module.md  Debounced_Callback_Hook.md  Download_Models.md  Download_Service.md  Engine.md  English_I18n.md  Error.md  Exclusive_Picker_Hook.md  Fast_Mode.md  Fast_Mode.test.md  Finalize.md  Foreground_Context.md  Frontend_Entry.md  Frontend_IPC_Bridge.md  (+110 more)
native-macos/: .swiftformat  .swiftlint.yml  DESIGN.md  Package.swift  README.md
native-macos/Bundle/: Info.plist
native-macos/scripts/: build-native-app.sh  clear-legacy-permissions.sh  install-local-app.sh
scripts/: build-tauri-dmg.sh  build_engine.py  check_bundle_budget.mjs  rebuild_graphify.py  release.sh  sync-version.sh  test_build_engine_atomicity.py
src/: main.motion.test.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json  main.json  selection.json  subtitle.json
src-tauri/icons/: icon.icns
src-tauri/resources/: download_models.py  engine.py  funasr_server.py  hf_cache_utils.py  server_common.py  test_download_models_regression.py  test_models_dir_reset_regression.py  test_whisper_server_device_detection.py  whisper_server.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_polish.rs  assistant.rs  audio.rs  clipboard.rs  codex_oauth.rs  funasr.rs  history.rs  hotkey.rs  mod.rs  permissions.rs  profile.rs  selection.rs  updater.rs  window.rs
src-tauri/src/services/: ai_polish_service.rs  ai_polish_transport_retry_tests.rs  alibaba_asr_service.rs  assistant_service.rs  audio_service.rs  codex_oauth_prewarm_tests.rs  codex_oauth_service.rs  download_service.rs  funasr_service.rs  glm_asr_service.rs  history_service.rs  llm_client.rs  llm_provider.rs  llm_reasoning_negotiation_tests.rs  mod.rs  openai_fast_mode_oauth_tests.rs  permissions_service.rs  profile_service.rs  screen_capture_service.rs  selection_service.rs  web_search_service.rs
src-tauri/src/services/audio_service/: capture.rs  finalize.rs  interim.rs  mod.rs  monitor.rs  resample.rs  wav.rs
src-tauri/src/state/: app_state.rs  mod.rs  user_profile.rs
src-tauri/src/utils/: error.rs  foreground.rs  mod.rs  paths.rs  sound.rs
src/api/: autostart.ts  clipboard.ts  funasr.ts  hotkey.ts  invoke.ts  tauri.fastMode.test.ts  tauri.ts  window.ts
src/components/: Kbd.tsx  RecordingButton.tsx  SecretInput.tsx  StatusIndicator.tsx  TitleBar.tsx  TranscriptionHistory.tsx  TranscriptionResult.test.tsx  TranscriptionResult.tsx
src/contexts/: RecordingContext.tsx
src/hooks/: useDebouncedCallback.ts  useExclusivePicker.ts  useHotkey.ts  useHotkeyCapture.ts  useModelStatus.ts  useRecording.ts  useSmoothText.ts  useTheme.ts  useWindowDrag.ts
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: asrEngineCapabilities.test.ts  asrEngineCapabilities.ts  audio.ts  constants.ts  error.ts  fastMode.test.ts  fastMode.ts  hotkey.ts  llmModelOptions.ts  llmReasoningProbe.test.ts  llmReasoningProbe.ts  motion.ts  selectionAssistantSettingsContract.test.ts  selectionAssistantWindowContract.test.ts  storage.ts  tauriCapabilities.test.ts  trayInteractionContract.test.ts  utils.ts
(+168 files in other folders)
