[project]
name = "light-whisper"
version = "1.0.0"
description = "基于 FunASR 的中文语音转文字桌面应用"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "funasr>=1.2.7",
    "huggingface-hub>=0.24.0",
    "librosa>=0.11.0",
    "numpy<2",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "transformers>=4.45.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
