[package]
name = "light-whisper"
version = "1.0.0"
description = "轻语 - 基于FunASR的中文语音转文字应用"
authors = ["sun"]
edition = "2021"

[lib]
name = "light_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 临时文件
tempfile = "3"

# 跨平台路径
dirs = "6"


# 日志
log = "0.4"

# 错误处理
thiserror = "2"

# Windows 键盘模拟
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }
