[package]
name = "light-whisper"
version = "1.1.12"
description = "轻语 - 基于FunASR的中文语音转文字应用"
authors = ["sun"]
edition = "2021"

[lib]
name = "light_whisper_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["rt", "io-util", "sync", "time", "process", "fs", "macros"] }

# 用户目录路径
dirs = "6"


# 日志
log = "0.4"

# Base64 编解码
base64 = "0.22"

# 原生音频捕获
cpal = "0.15"

# HTTP 请求（AI 润色服务）
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
eventsource-stream = "0.2"
tokio-stream = "0.1"

# 系统密钥环（安全存储 API Key）
tauri-plugin-keyring = "0.1"

# 错误处理
thiserror = "2"

# 高质量音频重采样
rubato = "0.16"

# 无 poison 的高性能互斥锁
parking_lot = "0.12"

# WAV 编解码
hound = "3.5"

# 引擎归档解压（首次启动解压 engine.tar.xz，兼容旧 engine.zip）
tar = "0.4"
xz2 = "0.1"
zip = "2"

# Windows 键盘模拟
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Media_Audio"] }
uiautomation = "0.24"
xcap = { version = "0.9", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
